maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:2: error: Missing closing brace `}' assumed here
override def run() {
^JediEscaper:2: error: expected start of definition
override def run() {
         ^JediEscaper:47: error: expected class or object definition
def numerote(x:Int,y:Int,i:Int){
^JediEscaper:77: error: Missing closing brace `}' assumed here
	def aBiscuit(x:Int, y:Int):Boolean = hasBaggle(x,y)
        ^